Add Assignment 5 PyCaret notebooks, models, and docs

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ dist/
 build/
 *.log    
 *.script
+Assignment.steps
+**/mlruns/
+Assignment 5/PyCaret/data/creditcard.csv
+Assignment 5/PyCaret/association-rules/association_rules.csv
