Ignore AutoGluon model artifacts for California housing

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ Assignment.steps
 Assignment 5/PyCaret/association-rules/association_rules.csv
 Assignment 5/PyCaret/data/creditcard.csv
 Assignment 6/AutoGluon/*/data/
+Assignment 6/AutoGluon/california-housing/ag_california_models/
