Add AutoGluon tabular demo notebook and ignore model dirs

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ Assignment 5/PyCaret/association-rules/association_rules.csv
 Assignment 5/PyCaret/data/creditcard.csv
 Assignment 6/AutoGluon/*/data/
 Assignment 6/AutoGluon/california-housing/ag_california_models/
+Assignment 6/AutoGluon/tabular-demos/ag_tabular_*/
